# cache-dash-h

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md  default.nix
src/: CMakeLists.txt  SpookyV2.cpp  database.h  error_prints.c  error_prints.h  gcc_compat.h  main.cpp  strace.cpp  strace.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test-1.sh
